<resources>
    <string name="app_name">Blog</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
</resources>
